--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,9 @@ services:
       - "5432:5432"
     expose:
       - "5432"
+  redis:
+    image: redis:3.0.4
+    ports:
+      - "6379:6379"
+    expose:
+      - "6379"
