--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
   web:
     build: .
     command: foreman run bundle exec rails s -p 3000 -b '0.0.0.0'
+    env_file:
+      - '.env'
     volumes:
       - .:/app
     ports:
