--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       - ./tmp/db:/var/lib/postgresql/data
   web:
     build: .
-    command: foreman run bundle exec rails s -p 3000 -b '0.0.0.0'
+    command: bash -c "rm tmp/pids/server.pid && foreman run bundle exec rails s -p 3000 -b '0.0.0.0'"
     env_file:
       - '.env'
     volumes:
