--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,8 @@
 version: '3'
 services:
-  db:
-    image: postgres
-    volumes:
-      - ./tmp/db:/var/lib/postgresql/data
   web:
     build: .
-    command: bash -c "rm tmp/pids/server.pid && foreman run bundle exec rails s -p 3000 -b '0.0.0.0'"
+    command: bash -c "rm tmp/pids/server.pid; foreman run bundle exec rails s -p 3000 -b '0.0.0.0'"
     env_file:
       - '.env'
     volumes:
@@ -15,3 +11,20 @@ services:
       - "3000:3000"
     depends_on:
       - db
+      - redis
+  sidekiq:
+    build: .
+    env_file:
+      - '.env'
+    command: bundle exec sidekiq
+    volumes:
+      - .:/app
+    depends_on:
+      - db
+      - redis
+  db:
+    image: mdillon/postgis:10-alpine
+    volumes:
+      - ./tmp/db:/var/lib/postgresql/data
+  redis:
+    image: redis
